@@ -119,6 +119,9 @@ function simple_complex_validate_test_cli()
             'Bicycle'
         ],
         'tableElements' => [
+            //'exclusive' => true,
+            //'whitelist' => ['unspecified_1'],
+            //'blacklist' => ['saddle', 'accessories'],
             'rulesByElements' => [
                 'wheels' => [
                     'integer',
@@ -206,6 +209,8 @@ function simple_complex_validate_test_cli()
         ],
         null
     );
+    $bike->unspecified_1 = 'sneaky';
+    $bike->unspecified_2 = 'stealthy';
 
 
     $logger->debug('Validate simple bike: ' . (int) $validate->challenge($bike, $ruleSet));
